Go to jdk 25 (#17)