@@ -8,9 +8,10 @@
   <artifactId>core</artifactId>
   <name>core</name>
   <properties>
+   <!--
     <maven.compiler.source>24</maven.compiler.source>
     <maven.compiler.target>24</maven.compiler.target>
-    <maven.compiler.release>24</maven.compiler.release>
+    <maven.compiler.release>24</maven.compiler.release>-->
     <build.plugins.plugin.version>3.5.3</build.plugins.plugin.version>
     <guava.version>32.0.1-jre</guava.version>
     <jackson.version>2.14.0</jackson.version>
@@ -123,9 +124,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>24</release>
+          <release>25</release>
           <jdkToolchain>
-            <version>24</version>
+            <version>25</version>
           </jdkToolchain>
           <compilerArgs>
             <arg>--add-modules</arg>
@@ -139,6 +140,7 @@
         <version>${surefire.version}</version>
         <configuration>
           <argLine>
+            -XX:-UseCompactObjectHeaders
             --add-opens java.base/java.nio=ALL-UNNAMED
             --add-modules jdk.incubator.vector
             -Djdk.attach.allowAttachSelf=true
